--- a/branches/httpclient-4.1/pom.xml
+++ b/branches/httpclient-4.1/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.threerings.s3lib</groupId>
     <artifactId>s3lib-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-plausiblerc1</version>
     <name>s3lib-parent</name>
 
 
