--- a/branches/httpclient-4.1/s3lib/pom.xml
+++ b/branches/httpclient-4.1/s3lib/pom.xml
@@ -5,13 +5,12 @@
     <groupId>com.threerings.s3lib</groupId>
     <artifactId>s3lib</artifactId>
     <packaging>jar</packaging>
-    <version>2.0-SNAPSHOT</version>
     <name>s3lib</name>
 
     <parent>
         <artifactId>s3lib-parent</artifactId>
         <groupId>com.threerings.s3lib</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0-plausiblerc1</version>
     </parent>
 
     <url>http://code.google.com/p/s3lib/</url>
